namespace client_generator.Templates
{
    public interface ITemplate
    {

        string TransformText();

    }
}
